revisión capítulo 3 inicio

--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -393,6 +393,9 @@ Distancia de traza esta medida cuantifica que tan difícil es diferenciar $\rho_
 
 Ya con esto se le da un significado cuantitativo de lo que se ha ido explicando hasta ahora. Además también se dan unas cotas explícitas a cuando se habla de la "mayoría" de los estados. Se tiene una cota exponencialmente pequeña  sobre la probabilidad de encontrar un estado lejano del canónico.\\ %(Dar comentario sobre lo intuitivo de las cotas)\\
 
+Una de tantas dificultades en la mecánica estadística es que sus principios se formulan desde la ignorancia subjetiva y los promedios de ensamble. Estos son principios físicos bastantes discutible.
+Recientemente se ha dado cuenta que los promedio de ensamble y la ignorancia subjetiva no son necesarios, Porque sistemas cuánticos individuales pueden mostrar características estadísticas. Esto es debido al entrelazamiento lo cual es un efecto cuántico, esto hace que la falta de conocimiento ya no sea subjetiva sino objetiva. Por la teoría cuántica se sabe que aunque se tenga todo el sistema descrito por la función de onda, la cual da un conocimiento completo del sistema, los subsistemas de este pueden seguir en un estado desconocido. De forma más específica el sistema puede estar en un estado puro mientras que un subsistema puede estar en un estado mixto. En este caso no se puede conocer el subsistema ya que este se comporta como una densidad de probabilidad. La comparación con la contraparte clásica es sorprendente porque tener un conocimiento completo del sistema clásico es saber cualquier subsistema. Luego si se aplica una teoría clásica las probabilidades aparecen como falta del conocimiento posible de obtener, si se llega a conocer todo no abrían probabilidades.
+Ya con resultados del capítulo anterior sobre: la mayoría de los estados puros de un sistema los subsistemas(suficientemente pequeños) están en un estado canónico
 
 
 
