--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -1,11 +1,12 @@
 \chapter{Evolución hacia el equilibrio}
 
-Ya después de haber dado una explicación más sólida a los principios de la mecánica estadística la siguiente pregunta que debe responderse es,¿ cómo ocurre la termalización?. ¿ Esta termalización puede deducirse de las ecuaciones básicas ?. Este será la pregunta que Linden et al. quisieron atacar se procederá a mostrar sus resultados del artículo (Linden et al. ,2008). 
-Una de tantas dificultades en la mecánica estadística es que sus principios se formulan desde la ignorancia subjetiva y los promedios de ensamble. Estos son principios físicos bastantes discutible.
-Recientemente se ha dado cuenta que los promedio de ensamble y la ignorancia subjetiva no son necesarios, Porque sistemas cuánticos individuales pueden mostrar características estadísticas. Esto es debido al entrelazamiento lo cual es un efecto cuántico, esto hace que la falta de conocimiento ya no sea subjetiva sino objetiva. Por la teoría cuántica se sabe que aunque se tenga todo el sistema descrito por la función de onda, la cual da un conocimiento completo del sistema, los subsistemas de este pueden seguir en un estado desconocido. De forma más específica el sistema puede estar en un estado puro mientras que un subsistema puede estar en un estado mixto. En este caso no se puede conocer el subsistema ya que este se comporta como una densidad de probabilidad. La comparación con la contraparte clásica es sorprendente porque tener un conocimiento completo del sistema clásico es saber cualquier subsistema. Luego si se aplica una teoría clásica las probabilidades aparecen como falta del conocimiento posible de obtener, si se llega a conocer todo no abrían probabilidades.
-Ya con resultados del capítulo anterior sobre: la mayoría de los estados puros de un sistema los subsistemas(suficientemente pequeños) están en un estado canónico. Este resultados aunque bastante general queda limitado por hablarse de un tiempo específico y habla de estados genéricos. Ahora se quiere ver su evolución temporal y en cuales circunstancias los sistemas llegan al equilibrio y fluctúan cerca a este. Los estados lejanos al equilibrio son no genéricos y serán tratados aquí. Para saber cómo moverse en este tema se va a determinar qué significa que un sistema esté termalizado. Para esto se darán las siguientes ideas:
+En el capítulo anterior se expuso la idea de Popescu et al.(referencia) para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. (referencia) proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde la perspectiva de (referencia).
 
-\textbf{Equilibrio}: Se dice que un sistema se equilibra si este evoluciona a un estado específico(puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Dado esto no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o no. Además se puede relajar las condiciones de independencia del estado inicial, o sea puede depender del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Esta definición de equilibrio es la parte más intuitiva a lo que se refiere sobre termalización. El hecho de que un estado se mantenga por un largo periodo de tiempo con las mismas características es lo que se piensa al  pensar en equilibrio. Aunque esto sería una forma general de hablar sobre equilibrio porque se da mucha libertad al estado y sus dependencias sobre el ambiente. Para seguir una idea más rigurosa de equilibrio se especifica lo sigeuinte.
+\section{Especificación del equilibrio}
+
+Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá explicitar lo que significa, basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
+\\
+Se dice que un sistema se equilibra si este evoluciona a un estado específico(puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Dado esto no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o no. Además se puede relajar las condiciones de independencia del estado inicial, o sea puede depender del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Esta definición de equilibrio es la parte más intuitiva a lo que se refiere sobre termalización. El hecho de que un estado se mantenga por un largo periodo de tiempo con las mismas características es lo que se piensa al  pensar en equilibrio. Aunque esto sería una forma general de hablar sobre equilibrio porque se da mucha libertad al estado y sus dependencias sobre el ambiente. Para seguir una idea más rigurosa de equilibrio se especifica lo sigeuinte.
 
 \textbf{Independencia del ambiente}: El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que al final llegan al equilibrio el estado dependa de la temperatura del baño. Con esto se puede restringir un poco más a lo que se llamará equilibrio.Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y se ve que para los mismos se tiene un mismo equilibrio. El estado exacto del baño no debería jugar un papel  tan importante ya que para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos. Como se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados idénticamente haber sido iniciados en un estado A y el otro en el estado B, el equilibrio se obtendrá así hayan empezado de maneras diferentes. Esto motiva lo siguiente
 
