--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -4,30 +4,24 @@ En el capítulo anterior se expuso la idea de Popescu et al.(referencia) para po
 
 \section{Especificación del equilibrio}
 
-Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá explicitar lo que significa, basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
+Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá establecer lo que significa, basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
 \\
-Se dice que un sistema se equilibra si este evoluciona a un estado específico(puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Dado esto no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o no. Además se puede relajar las condiciones de independencia del estado inicial, o sea puede depender del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Esta definición de equilibrio es la parte más intuitiva a lo que se refiere sobre termalización. El hecho de que un estado se mantenga por un largo periodo de tiempo con las mismas características es lo que se piensa al  pensar en equilibrio. Aunque esto sería una forma general de hablar sobre equilibrio porque se da mucha libertad al estado y sus dependencias sobre el ambiente. Para seguir una idea más rigurosa de equilibrio se especifica lo sigeuinte.
-
-\textbf{Independencia del ambiente}: El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que al final llegan al equilibrio el estado dependa de la temperatura del baño. Con esto se puede restringir un poco más a lo que se llamará equilibrio.Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y se ve que para los mismos se tiene un mismo equilibrio. El estado exacto del baño no debería jugar un papel  tan importante ya que para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos. Como se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados idénticamente haber sido iniciados en un estado A y el otro en el estado B, el equilibrio se obtendrá así hayan empezado de maneras diferentes. Esto motiva lo siguiente
-
-\textbf{Independencia del estado del subsistema}:Si el subsistema es pequeño en comparación con el ambiente el estado de equilibrio del subsistema debería ser independiente de su estado inicial.
-
-Pero para poder corroborar y unir estas ideas con los resultados ya bien conocidos se impone una última restricción
-
-\textbf{Forma Boltzmanniana del estado de equilibrio}: Bajo condiciones del estado inicial y el hamiltoniano, el estado de equilibrio del subsistema puede ser escrito como $\rho_{S}= \frac{1}{Z} \exp(-\frac{H_{S}}{k_{B}T})$la forma familiar ya conocida.
-Descomponiendo el problema de la termalización de esa forma permite ver cada uno de los aspectos por separado además de darle una generalidad a todo el tratamiento sin tener que restringirse a situaciones que usualmente se le asocian a la termalización. Por ejemplo no se debe quedar en el régimen de corta o débil interacción entre el sistema y el baño; decir que el baño es uno típico (Dado una temperatura o rango de energía), la energía puede llegar a ser una cantidad extensiva. Pueden tomarse situaciones en los que el sistema no llegue a equilibrio.
-Se mostrará con suposiciones no muy fuertes que los primeros dos supuestos(Equilibrio e independencia del ambiente) son propiedades de sistemas cuánticos.
-
-
-
-\textbf{El Hamiltoniano}: la evolución de todo el sistema viene dado por 
+La manera más intuitiva que se tiene sobre el equilibrio es que el sistema, que se está analizando, se mantiene en el mismo estado durante un largo periodo de tiempo con las mismas características; entonces se dice que un sistema se equilibra si este evoluciona a un estado específico (puede ser puro pero en general es mixto) y se mantiene allí por casi todo el tiempo. Aún no se dice nada  sobre las dependencias que pueda tener, o sea se puede tener una condición de dependencia laxa esto permite decir que el estado de equilibrio depende o no del estado inicial del susbsistema y/o del estado inicial del ambiente de forma arbitraría. Dado esto no es importante cuál sea el estado de equilibrio este puede ser la distribución de Boltzmann o cualquier otra. El concepto de equilibrio dicho aquí es una forma general de hablar sobre este fenómeno porque se da mucha libertad al estado y sus dependencias sobre el ambiente por eso se seguirá puliendo para no dejarlo tan general.
+\\
+El  estado de equilibrio del sistema no debería depender exactamente del estado inicial del baño. Esto quiere decir que el baño debe tener unos parámetros macroscópicos (como la temperatura) tales que al cuando se llega al equilibrio el estado dependa de la de estos parámetros, ya se restringe un poco más a lo que se llamará equilibrio.Esta idea también es proveniente de lo que normalmente se espera del equilibrio porque los parámetros macroscópicos son los que en general se tienen completamente especificados y estos establecen el equilibrio. El estado exacto del baño no debería jugar un papel  tan importante porque para los mismos parámetros macroscópicos pueden haber varios estados del baño que concuerden con ellos, se supone que con ciertos parámetros macroscópicos dados  un subsistema llegará al equilibrio sin importar cual ha sido su estado inicial. Pueden dos subsistemas preparados con los mismos parámetros macroscópicos haber sido iniciados en un estado A y el otro en el estado B llegarán al mismo estado de equilibrio sin importar en cual de los dos hayan empezado.  Esto motiva lo siguiente:
+Si el subsistema es pequeño en comparación con el ambiente el estado de equilibrio del subsistema debería ser independiente de su estado inicial. Pero para poder corroborar y unir estas ideas con los resultados conocidos se impone una última restricción. Bajo condiciones del estado inicial y el Hamiltoniano, el estado de equilibrio del subsistema puede ser escrito como $\rho_{S}= \frac{1}{Z} \exp(-\frac{H_{S}}{k_{B}T})$ la forma familiar dada por la mecánica estadística.
+\\
+Haber podido dividir el problema de la termalización de esta forma permite analizar cada uno de los aspectos por separado además de darle una generalidad a todo el tratamiento sin tener que restringirse a situaciones que usualmente se le asocian a la termalización. Por ejemplo no se debe quedar en el régimen de corta o débil interacción entre el sistema y el baño o decir que el baño es uno típico (Dado una temperatura o rango de energía). Pueden tomarse situaciones en los que el sistema no llegue a equilibrio. 
+\\
+Lo siguiente es que se mostrará con suposiciones no muy fuertes los primeros dos supuestos, la idea de que un sistema llegará al equilibrio y que el estado no depende del ambiente, son propiedades de sistemas cuánticos.La evolución del sistema tiene implicado al Hamiltoniano por eso se estudiará el siguiente:
 \begin{equation}
 H= \sum_{k} E_{k} \ket{E_{k}} \bra{E_{k}},
 \end{equation}
-$\ket{E_{k}}$ es el estado propio con energía $E_{k}$.Al Hamiltoniano anterior se le dará la siguiente y única restricción: Que tenga brechas de energías no degeneradas. Esta restricción quiere decir que  un hamiltoniano tiene brechas de energía no degeneradas si para cualquier diferencia de energías propias que sea diferente acero determina los valores de energía involucrados. Por ejemplo si se tiene 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).
-Esta restricción del Hamiltoniano implica que el subsistema y el baño no importa como se divida siempre van a estar interactuando. Esto excluye los hamiltonianos no interactuantes ($H=H_{S}+H_{E}$). Este tipo de hamiltonianos tienen muchas brechas de energía degeneradas. véase que si no hay interacción en el hamiltoniano la energía es $E=E_{S}+E_{E}$ sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$. Esto lleva a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer porque cualquier perturbación que se le haga al Hamiltoniano romperá las degeneraciones sin importar lo pequeña que seala perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema las escalas temporales no son importantes en este momento. Con este supuesto se puede hablar de interacciones complejas que por lo general no son muy tratados como interacciones de larga distancia o interacciones entre todas las partículas esto hace que la energía no llegue a ser una cantidad extensiva.
+donde $\ket{E_{k}}$ es el estado propio con energía $E_{k}$. Al Hamiltoniano anterior se le dará la única restricción de que tenga brechas de energías no degeneradas. Esto quiere decir que para una diferencia de energías dada, solo existe un par posible de estados con esa diferencia. El ejemplo puesto por (Linden et al.) es: si se tiene 4 valores propios de energía $E_{k}, E_{l},E_{m},E_{n}$ entonces $E_{k}-E_{l}=E_{m}-E_{n} $ implica $k=l$ y $m=n$, o $k=m$ y $l=n$. Esto implica que los niveles de energía no son iguales para diferentes estados (no son degenerados).\\
+Esta restricción del Hamiltoniano comprende que no importa como se divida el subsistema y el baño  siempre van a estar interactuando, esto excluye los Hamiltonianos no interactuantes ($H=H_{S}+H_{E}$) estos Hamiltonianos tienen muchas brechas de energía degeneradas. Véase que si no hay interacción en el Hamiltoniano la energía es $E=E_{S}+E_{B}$ y sean $E_{1},E_{2},E_{3},E_{4}$ tales que se satisfaga $E_{i}=E_{i}^{S}+E_{i}^{E}$ $i=1,2,3,4$, esto lleva a una brecha degenerada. Este supuesto no es tan fuerte como pueda llegar a parecer porque cualquier perturbación que se le haga al Hamiltoniano romperá las degeneraciones sin importar lo pequeña que sea la perturbación. Aunque estos cambios se tarden en hacer efecto sobre la evolución del sistema las escalas temporales no son importantes en este momento.  Gracias a esta restricción se pueden incluir interacciones complejas que por lo general no son analizadas en la literatura como interacciones de larga distancia o interacciones entre todas las partículas esto hace que la energía no llegue a ser una cantidad extensiva.
 
 \subsection{Equilibración}
+
 El punto principal que se quiere dar a entender viene en forma del siguiente resultado: Para casa estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada subsistema pequeño llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
 Hay en este resultado un requerimiento que anteriormente no fue nombrado, el requerimiento de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal. viendo el caso trivial de un solo estado propio de energía es claro que este no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque en el sentido anterior de equilibrio no cambia para nada y se diría que este se encuentra ya en equilibrio. Los resultados que se quieren mostrar tomaŕan estados lejanos de equilibrio sistemas que no se encuentre en el pero aquí llegan las otras suposiciones hechas anteriormente para que el subsistema no dependa del estado inicial este debe perder la información entonces si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que todo el sistema también evolucione en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el sistema deje de evolucionar debido a la unitaridad este debe seguir evolucionando con la misma proporción de antes. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados y el requerimiento de que tenga muchos estados propios de energía se valida.
 También se muestra que lo siguiente es suficiente: Cuando el estado de todo el sistema pasa por muchos estados diferentes cualquier estado pequeño del subsistema alcanza el equilibrio.
